info scrolling fix

--- a/site/index.html
+++ b/site/index.html
@@ -54,12 +54,12 @@
             </ul>
             
             <div class="tab-content">
-                <div id="movie-info-pane" class="tab-pane active">
+                <div id="movie-info-pane" class="tab-pane active info-pane">
                     <p>IMDb Rate: <a href="http://www.imdb.com/title/{{imdb_id}}/ratings" target="_blank">{{rate}}</a></p>
                     <p>Genres: {{genres}}</p>
                 </div>
                 
-                <div id="location-list-pane" class="tab-pane">
+                <div id="location-list-pane" class="tab-pane info-pane">
                     <ul id="location-list">
                     {{#locations}}
                         <li class="location-entry">
