info window for markers

--- a/site/index.html
+++ b/site/index.html
@@ -72,7 +72,13 @@
                 </div>
             </div>
         </div>
-        
+    </script>
+    
+    <script id="marker-window-tmpl" type="text/html">
+        <h3>{{actual_location}}</h3>
+        {{#movie_location}}
+        <h4>as {{movie_location}}</h4>
+        {{/movie_location}}
     </script>
 </body>
 </html>
