support linked dataset

--- a/site/index.html
+++ b/site/index.html
@@ -30,7 +30,7 @@
             <li>
                 <div class="suggestion-item">
                     <span class="suggestion-inline-helper"/>
-                    <img src="images/imdb/{{imdb_id}}.jpg" width="45"/>
+                    <img src="images/imdb/{{id}}.jpg" width="45"/>
                     <span>{{name}}</span><span> ({{year}})</span>
                 </div>
             </li>
@@ -39,7 +39,7 @@
     
     <script id="info-box-tmpl" type="text/html">
         <div id="movie-header">
-            <img src="images/imdb/{{imdb_id}}.jpg" id="movie-image"/>
+            <img src="images/imdb/{{id}}.jpg" id="movie-image"/>
             <div id="movie-intro-box">
                 <span id="movie-name">{{name}}</span>
                 <span id="movie-year">({{year}})</span><br/>
