imdb data updated

--- a/site/index.html
+++ b/site/index.html
@@ -55,7 +55,7 @@
             
             <div class="tab-content">
                 <div id="movie-info-pane" class="tab-pane active info-pane">
-                    <p>IMDb Rate: <a href="http://www.imdb.com/title/{{imdb_id}}/ratings" target="_blank">{{rate}}</a></p>
+                    <p>IMDb Rate: <a href="http://www.imdb.com/title/{{id}}/ratings" target="_blank">{{rate}}</a></p>
                     <p>Genres: {{genres}}</p>
                 </div>
                 
